I changed the tittle

--- a/html-css/week2/index.html
+++ b/html-css/week2/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Week 2: Tigran </title>
+        <title> Week 2: Tigran N </title>
     </head>
  <body>
     <checkout-alert id="fixedWrapper" style="position: fixed; z-index: 2147483647; height: 100%; width: 100%; pointer-events: none;"></checkout-alert>
